generated/JavaParser.cpp

// Generated from grammar/JavaParser.g4 by ANTLR 4.13.2


#include "JavaParserListener.h"
#include "JavaParserVisitor.h"

#include "JavaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct JavaParserStaticData final {
  JavaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  JavaParserStaticData(const JavaParserStaticData&) = delete;
  JavaParserStaticData(JavaParserStaticData&&) = delete;
  JavaParserStaticData& operator=(const JavaParserStaticData&) = delete;
  JavaParserStaticData& operator=(JavaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag javaparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<JavaParserStaticData> javaparserParserStaticData = nullptr;

void javaparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (javaparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(javaparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<JavaParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "packageDeclaration", "importDeclaration", "qualifiedName", 
      "annotation", "elementValue", "typeDeclaration", "classDeclaration", 
      "classModifier", "superclass", "superinterfaces", "interfaceDeclaration", 
      "enumDeclaration", "recordDeclaration", "recordComponentList", "recordComponent", 
      "interfaceBody", "interfaceBodyDeclaration", "enumBody", "enumConstantList", 
      "enumConstant", "classBody", "classBodyDeclaration", "memberDeclaration", 
      "modifier", "fieldDeclaration", "variableDeclarators", "variableDeclarator", 
      "variableDeclaratorId", "variableInitializer", "arrayInitializer", 
      "methodDeclaration", "constructorDeclaration", "throws_", "qualifiedNameList", 
      "methodBody", "formalParameters", "formalParameterList", "formalParameter", 
      "typeType", "primitiveType", "classOrInterfaceType", "typeArguments", 
      "typeArgument", "typeParameters", "typeParameter", "typeTypeOrVoid", 
      "typeList", "dims", "block", "blockStatement", "localVariableDeclarationStatement", 
      "localVariableDeclaration", "statement", "switchBlock", "switchLabel", 
      "catchClause", "catchType", "finallyBlock", "forControl", "enhancedForControl", 
      "forInit", "forUpdate", "expressionList", "statementExpression", "parExpression", 
      "expression", "lambdaExpression", "lambdaParameters", "lambdaBody", 
      "assignmentExpression", "leftHandSide", "assignmentOperator", "conditionalExpression", 
      "conditionalOrExpression", "conditionalAndExpression", "inclusiveOrExpression", 
      "exclusiveOrExpression", "andExpression", "equalityExpression", "relationalExpression", 
      "shiftExpression", "additiveExpression", "multiplicativeExpression", 
      "unaryExpression", "unaryExpressionNotPlusMinus", "castExpression", 
      "postfixExpression", "postfixPart", "primary", "creator", "createdName", 
      "classCreatorRest", "arrayCreatorRest", "arguments", "methodInvocation", 
      "fieldAccess", "arrayAccess", "expressionName", "ambiguousName", "literal", 
      "typeArgumentsOrDiamond"
    },
    std::vector<std::string>{
      "", "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", "'case'", 
      "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'", 
      "'do'", "'double'", "'else'", "'enum'", "'exports'", "'extends'", 
      "'final'", "'finally'", "'float'", "'for'", "'if'", "'goto'", "'implements'", 
      "'import'", "'instanceof'", "'int'", "'interface'", "'long'", "'module'", 
      "'native'", "'new'", "'null'", "'open'", "'opens'", "'package'", "'permits'", 
      "'private'", "'protected'", "'public'", "'provides'", "'record'", 
      "'requires'", "'return'", "'sealed'", "'short'", "'static'", "'strictfp'", 
      "'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'", 
      "'to'", "'transient'", "'transitive'", "'try'", "'uses'", "'var'", 
      "'void'", "'volatile'", "'when'", "'while'", "'with'", "'yield'", 
      "'true'", "'false'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
      "','", "'.'", "'...'", "'@'", "':'", "'::'", "'->'", "'='", "'>'", 
      "'<'", "'!'", "'~'", "'\\u003F'", "'=='", "'<='", "'>='", "'!='", 
      "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'&'", "'|'", "'^'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
      "'|='", "'^='", "'<<='", "'>>='", "'>>>='", "'<<'", "'>>'", "'>>>'"
    },
    std::vector<std::string>{
      "", "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH", 
      "CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", 
      "ENUM", "EXPORTS", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", 
      "IF", "GOTO", "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", "INTERFACE", 
      "LONG", "MODULE", "NATIVE", "NEW", "NULL", "OPEN", "OPENS", "PACKAGE", 
      "PERMITS", "PRIVATE", "PROTECTED", "PUBLIC", "PROVIDES", "RECORD", 
      "REQUIRES", "RETURN", "SEALED", "SHORT", "STATIC", "STRICTFP", "SUPER", 
      "SWITCH", "SYNCHRONIZED", "THIS", "THROW", "THROWS", "TO", "TRANSIENT", 
      "TRANSITIVE", "TRY", "USES", "VAR", "VOID", "VOLATILE", "WHEN", "WHILE", 
      "WITH", "YIELD", "TRUE", "FALSE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
      "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ELLIPSIS", "AT", "COLON", 
      "DOUBLECOLON", "ARROW", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", 
      "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", 
      "SUB", "MUL", "DIV", "MOD", "BITAND", "BITOR", "CARET", "ADD_ASSIGN", 
      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", 
      "OR_ASSIGN", "XOR_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
      "LSHIFT", "RSHIFT", "URSHIFT", "IntegerLiteral", "FloatingPointLiteral", 
      "CharacterLiteral", "StringLiteral", "TextBlock", "Identifier", "WS", 
      "COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  javaparserParserStaticData = std::move(staticData);
}

}

JavaParser::JavaParser(TokenStream *input) : JavaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

JavaParser::JavaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  JavaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *javaparserParserStaticData->atn, javaparserParserStaticData->decisionToDFA, javaparserParserStaticData->sharedContextCache, options);
}

JavaParser::~JavaParser() {
  delete _interpreter;
}

const atn::ATN& JavaParser::getATN() const {
  return *javaparserParserStaticData->atn;
}

std::string JavaParser::getGrammarFileName() const {
  return "JavaParser.g4";
}

const std::vector<std::string>& JavaParser::getRuleNames() const {
  return javaparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& JavaParser::getVocabulary() const {
  return javaparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView JavaParser::getSerializedATN() const {
  return javaparserParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

JavaParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::CompilationUnitContext::EOF() {
  return getToken(JavaParser::EOF, 0);
}

JavaParser::PackageDeclarationContext* JavaParser::CompilationUnitContext::packageDeclaration() {
  return getRuleContext<JavaParser::PackageDeclarationContext>(0);
}

std::vector<JavaParser::ImportDeclarationContext *> JavaParser::CompilationUnitContext::importDeclaration() {
  return getRuleContexts<JavaParser::ImportDeclarationContext>();
}

JavaParser::ImportDeclarationContext* JavaParser::CompilationUnitContext::importDeclaration(size_t i) {
  return getRuleContext<JavaParser::ImportDeclarationContext>(i);
}

std::vector<JavaParser::TypeDeclarationContext *> JavaParser::CompilationUnitContext::typeDeclaration() {
  return getRuleContexts<JavaParser::TypeDeclarationContext>();
}

JavaParser::TypeDeclarationContext* JavaParser::CompilationUnitContext::typeDeclaration(size_t i) {
  return getRuleContext<JavaParser::TypeDeclarationContext>(i);
}


size_t JavaParser::CompilationUnitContext::getRuleIndex() const {
  return JavaParser::RuleCompilationUnit;
}

void JavaParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void JavaParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}


std::any JavaParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

JavaParser::CompilationUnitContext* JavaParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, JavaParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(204);
      packageDeclaration();
      break;
    }

    default:
      break;
    }
    setState(210);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaParser::IMPORT) {
      setState(207);
      importDeclaration();
      setState(212);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(216);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 364488642068994) != 0) || _la == JavaParser::SEMI

    || _la == JavaParser::AT) {
      setState(213);
      typeDeclaration();
      setState(218);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(219);
    match(JavaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclarationContext ------------------------------------------------------------------

JavaParser::PackageDeclarationContext::PackageDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::PackageDeclarationContext::PACKAGE() {
  return getToken(JavaParser::PACKAGE, 0);
}

JavaParser::QualifiedNameContext* JavaParser::PackageDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}

tree::TerminalNode* JavaParser::PackageDeclarationContext::SEMI() {
  return getToken(JavaParser::SEMI, 0);
}

std::vector<JavaParser::AnnotationContext *> JavaParser::PackageDeclarationContext::annotation() {
  return getRuleContexts<JavaParser::AnnotationContext>();
}

JavaParser::AnnotationContext* JavaParser::PackageDeclarationContext::annotation(size_t i) {
  return getRuleContext<JavaParser::AnnotationContext>(i);
}


size_t JavaParser::PackageDeclarationContext::getRuleIndex() const {
  return JavaParser::RulePackageDeclaration;
}

void JavaParser::PackageDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageDeclaration(this);
}

void JavaParser::PackageDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageDeclaration(this);
}


std::any JavaParser::PackageDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaParserVisitor*>(visitor))
    return parserVisitor->visitPackageDeclaration(this);
  else
    return visitor->visitChildren(this);
}

JavaParser::PackageDeclarationContext* JavaParser::packageDeclaration() {
  PackageDeclarationContext *_localctx = _tracker.createInstance<PackageDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, JavaParser::RulePackageDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(224);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaParser::AT) {
      setState(221);
      annotation();
      setState(226);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(227);
    match(JavaParser::PACKAGE);
    setState(228);
    qualifiedName();
    setState(229);
    match(JavaParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclarationContext ------------------------------------------------------------------

JavaParser::ImportDeclarationContext::ImportDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::ImportDeclarationContext::IMPORT() {
  return getToken(JavaParser::IMPORT, 0);
}

JavaParser::QualifiedNameContext* JavaParser::ImportDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}

tree::TerminalNode* JavaParser::ImportDeclarationContext::SEMI() {
  return getToken(JavaParser::SEMI, 0);
}

tree::TerminalNode* JavaParser::ImportDeclarationContext::STATIC() {
  return getToken(JavaParser::STATIC, 0);
}

std::vector<tree::TerminalNode *> JavaParser::ImportDeclarationContext::DOT() {
  return getTokens(JavaParser::DOT);
}

tree::TerminalNode* JavaParser::ImportDeclarationContext::DOT(size_t i) {
  return getToken(JavaParser::DOT, i);
}

std::vector<tree::TerminalNode *> JavaParser::ImportDeclarationContext::MUL() {
  return getTokens(JavaParser::MUL);
}

tree::TerminalNode* JavaParser::ImportDeclarationContext::MUL(size_t i) {
  return getToken(JavaParser::MUL, i);
}


size_t JavaParser::ImportDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleImportDeclaration;
}

void JavaParser::ImportDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportDeclaration(this);
}

void JavaParser::ImportDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportDeclaration(this);
}


std::any JavaParser::ImportDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaParserVisitor*>(visitor))
    return parserVisitor->visitImportDeclaration(this);
  else
    return visitor->visitChildren(this);
}

JavaParser::ImportDeclarationContext* JavaParser::importDeclaration() {
  ImportDeclarationContext *_localctx = _tracker.createInstance<ImportDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, JavaParser::RuleImportDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(231);
    match(JavaParser::IMPORT);
    setState(233);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::STATIC) {
      setState(232);
      match(JavaParser::STATIC);
    }
    setState(235);
    qualifiedName();
    setState(240);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaParser::DOT) {
      setState(236);
      match(JavaParser::DOT);
      setState(237);
      match(JavaParser::MUL);
      setState(242);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(243);
    match(JavaParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameContext ------------------------------------------------------------------

JavaParser::QualifiedNameContext::QualifiedNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JavaParser::QualifiedNameContext::Identifier() {
  return getTokens(JavaParser::Identifier);
}

tree::TerminalNode* JavaParser::QualifiedNameContext::Identifier(size_t i) {
  return getToken(JavaParser::Identifier, i);
}

std::vector<tree::TerminalNode *> JavaParser::QualifiedNameContext::DOT() {
  return getTokens(JavaParser::DOT);
}

tree::TerminalNode* JavaParser::QualifiedNameContext::DOT(size_t i) {
  return getToken(JavaParser::DOT, i);
}


size_t JavaParser::QualifiedNameContext::getRuleIndex() const {
  return JavaParser::RuleQualifiedName;
}

void JavaParser::QualifiedNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualifiedName(this);
}

void JavaParser::QualifiedNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualifiedName(this);
}


std::any JavaParser::QualifiedNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaParserVisitor*>(visitor))
    return parserVisitor->visitQualifiedName(this);
  else
    return visitor->visitChildren(this);
}

JavaParser::QualifiedNameContext* JavaParser::qualifiedName() {
  QualifiedNameContext *_localctx = _tracker.createInstance<QualifiedNameContext>(_ctx, getState());
  enterRule(_localctx, 6, JavaParser::RuleQualifiedName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(245);
    match(JavaParser::Identifier);
    setState(250);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(246);
        match(JavaParser::DOT);
        setState(247);
        match(JavaParser::Identifier); 
      }
      setState(252);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnotationContext ------------------------------------------------------------------

JavaParser::AnnotationContext::AnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::AnnotationContext::AT() {
  return getToken(JavaParser::AT, 0);
}

JavaParser::QualifiedNameContext* JavaParser::AnnotationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}

tree::TerminalNode* JavaParser::AnnotationContext::LPAREN() {
  return getToken(JavaParser::LPAREN, 0);
}

tree::TerminalNode* JavaParser::AnnotationContext::RPAREN() {
  return getToken(JavaParser::RPAREN, 0);
}

JavaParser::ElementValueContext* JavaParser::AnnotationContext::elementValue() {
  return getRuleContext<JavaParser::ElementValueContext>(0);
}


size_t JavaParser::AnnotationContext::getRuleIndex() const {
  return JavaParser::RuleAnnotation;
}

void JavaParser::AnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnotation(this);
}

void JavaParser::AnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnotation(this);
}


std::any JavaParser::AnnotationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaParserVisitor*>(visitor))
    return parserVisitor->visitAnnotation(this);
  else
    return visitor->visitChildren(this);
}

JavaParser::AnnotationContext* JavaParser::annotation() {
  AnnotationContext *_localctx = _tracker.createInstance<AnnotationContext>(_ctx, getState());
  enterRule(_localctx, 8, JavaParser::RuleAnnotation);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(253);
    match(JavaParser::AT);
    setState(254);
    qualifiedName();
    setState(260);
    _errHandler->sync(this);
